// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompt builders — snapshots > buildBlueprintConformancePrompt matches snapshot 1`] = `
"## Task: blueprint-conformance

You are checking one GitHub issue against the Superfield Blueprint for conformance violations. This check is **advisory** — it does not block the issue from being worked. Its purpose is to surface concerns early so the agent picking up the issue knows what to watch out for.

### Issue #42 — feat: example feature

## Phase
Identity

## Motivation
Because.

## Features
- [ ] Build it

## Test Plan
- [ ] Verify it

### Candidate blueprint domains

- \`blueprint/rules/blueprints/arch.yaml\`
- \`blueprint/rules/blueprints/auth.yaml\`

## Consulting the Blueprint

The Superfield Blueprint at \`blueprint/rules/graph.yaml\` is the authoritative source for architecture, security, design patterns, and antipatterns. Before introducing a new public API, a new dependency, a new module boundary, or a new pattern, search the relevant domain blueprint:

- Architecture: \`blueprint/rules/blueprints/arch.yaml\`
- Auth & sessions: \`blueprint/rules/blueprints/auth.yaml\`
- Data layer: \`blueprint/rules/blueprints/data.yaml\`
- Testing: \`blueprint/rules/blueprints/test.yaml\`
- Process & PRs: \`blueprint/rules/blueprints/process.yaml\`
- TypeScript-specific: \`blueprint/rules/implementations/ts/\`

If a rule applies, follow it. If you choose to deviate, document why in the commit body and cite the rule ID you are deviating from.

## What you do

1. Read each candidate domain blueprint above.
2. For each rule whose \`type\` is \`threat\`, \`principle\`, or \`antipattern\`, evaluate whether the issue's proposed scope, motivation, or features could violate it.
3. Skip \`design_pattern\` and \`architecture\` rules — those are prescriptive guidance, not violations.
4. Skip rules where \`deprecated: true\`.

## Output contract

Emit exactly one JSON object:

\`\`\`json
{
  "issue_number": 42,
  "violations": [
    {
      "rule_id": "ARCH-T-001",
      "rule_name": "server-code-in-browser-bundle",
      "rule_type": "threat",
      "domain": "arch",
      "concern": "1–2 sentences explaining what in the issue conflicts with this rule"
    }
  ]
}
\`\`\`

If no violations are found, emit \`"violations": []\`.

## Rules

- Cite only real rule IDs that exist in the blueprint files. Do not invent.
- Be conservative: only flag rules where there is a clear, articulable concern.
- Emit JSON only — no surrounding prose."
`;

exports[`prompt builders — snapshots > buildCIFailurePrompt matches snapshot 1`] = `
"## Project: Superfield

Superfield is a GitOps AI orchestrator. The forge (GitHub) is the single source of truth for all orchestration state — issues are the task queue, the Plan tracking issue holds ordered work, PRs are change proposals, and merge to \`main\` means done. There is no local state aside from credentials.

### Canonical references

- Product requirements: \`docs/prd.md\` in this repository
- Design rules graph: \`blueprint/rules/graph.yaml\` (the Superfield Blueprint)
- Per-domain blueprint rules: \`blueprint/rules/blueprints/<domain>.yaml\`
- TypeScript implementation rules: \`blueprint/rules/implementations/ts/\`

When in doubt about an architectural or design decision, consult the blueprint rule that applies and cite its rule ID (e.g. \`ARCH-P-001\`) in commit messages and PR bodies.

## Situation

The following CI check is failing on \`main\` and is blocking all development:

- Check: test:unit
- Commit: abc1234
- Logs: https://github.com/o/r/runs/1
- Tracking issue: #42 — feat: example feature
- Branch: fix/ci

Remediating \`main\` takes absolute priority over any feature work.

## Worktree isolation

Your assigned worktree is:

\`/tmp/wt\`

All work must happen inside this directory. Do not:

- Touch files outside the worktree
- Touch the main repo checkout or any other issue's worktree
- Modify shared user config or system files
- Run commands that mutate state outside the worktree (e.g. \`gh repo edit\` on a different repo)

The first thing you do is \`cd\` into the worktree. Every subsequent shell command runs from there.

## Your task

1. Read the CI logs at the URL above to understand exactly what is failing.
2. Reproduce the failure locally — run the failing check command in this worktree.
3. Identify the root cause. Do not guess; read the error carefully.
4. Apply the smallest correct fix. Do not refactor surrounding code.
5. Verify locally that the fix passes the failing check.
6. Push your fix to the remote branch.
7. Tick off each item in issue #42's checklist as you go.
8. When the checklist is complete, open a PR as ready for review (never draft).

You are the primary agent for this issue. Do not exit until the PR is merged and the issue is CLOSED.

## Rules

- Fix only what is broken. Do not bundle unrelated changes.
- If the root cause is genuinely ambiguous, post a comment on issue #42 describing what you found before attempting a fix.
- Never bypass CI checks with \`--no-verify\` or by disabling tests. Fix the underlying problem.

## Commit standards

- Use conventional commit prefixes: \`feat\`, \`fix\`, \`refactor\`, \`test\`, \`docs\`, \`chore\`, \`security\`.
- Stage files explicitly by name. Never use \`git add .\` or \`git add -A\`.
- Never use \`--no-verify\` to bypass pre-commit hooks. If a hook fails, fix the underlying issue.
- Reference the issue number in the commit body: \`Refs #N\` for in-progress, \`Closes #N\` only on the final commit that completes the work.
- Cite blueprint rule IDs in commit bodies when the change implements or mitigates a specific rule.

## Begin

\`cd\` into your worktree and start by fetching the CI logs."
`;

exports[`prompt builders — snapshots > buildDevScoutPrompt matches snapshot 1`] = `
"## Project: Superfield

Superfield is a GitOps AI orchestrator. The forge (GitHub) is the single source of truth for all orchestration state — issues are the task queue, the Plan tracking issue holds ordered work, PRs are change proposals, and merge to \`main\` means done. There is no local state aside from credentials.

### Canonical references

- Product requirements: \`docs/prd.md\` in this repository
- Design rules graph: \`blueprint/rules/graph.yaml\` (the Superfield Blueprint)
- Per-domain blueprint rules: \`blueprint/rules/blueprints/<domain>.yaml\`
- TypeScript implementation rules: \`blueprint/rules/implementations/ts/\`

When in doubt about an architectural or design decision, consult the blueprint rule that applies and cite its rule ID (e.g. \`ARCH-P-001\`) in commit messages and PR bodies.

## Assignment: dev-scout for phase "Identity"

- Scout issue: #42 — feat: example feature
- Phase goal: Build the auth seams
- Branch: chore/scout

### Downstream feature issues you are scaffolding for

- #50: feat: child

## Worktree isolation

Your assigned worktree is:

\`/tmp/wt\`

All work must happen inside this directory. Do not:

- Touch files outside the worktree
- Touch the main repo checkout or any other issue's worktree
- Modify shared user config or system files
- Run commands that mutate state outside the worktree (e.g. \`gh repo edit\` on a different repo)

The first thing you do is \`cd\` into the worktree. Every subsequent shell command runs from there.

## Your role

The dev-scout is the first issue in every phase. You do NOT implement real behavior. You lay out the structural seams that the parallel feature agents will build against:

1. Read the body of every downstream feature issue above to understand the planned scope.
2. Identify every integration point: new modules, public functions, types, and interfaces that feature agents will depend on.
3. Create the seams:
   - TypeScript interfaces and types for all new public API surfaces
   - No-op function implementations that satisfy the type contracts (\`throw new Error('not implemented')\` or return typed stubs)
   - Test stubs declared with \`it.todo()\` / \`describe.todo()\` — never \`it.skip()\` and never failing tests
4. Ensure all existing tests still pass and the project compiles with zero errors.
5. For each downstream feature issue, post a comment listing the specific stubs and seams you created that it will consume.
6. Tick off each item in your scout issue's checklist as you complete it.

## Merge qualification

Your PR qualifies for merge when:

1. \`tsc --noEmit\` passes with zero errors
2. The full test suite passes (todo tests do not count as failures)
3. New test stubs use \`it.todo()\` — committed but not yet implemented
4. Every planned interface and stub is present in code
5. Every downstream feature issue has your handoff comment
6. Your scout issue checklist is fully checked off

You open the PR yourself once all six are true.

## Rules

- Stubs only. Do NOT implement real behavior.
- Existing tests must stay green.
- New test stubs must be \`it.todo()\` — they must not be \`it.skip()\`, must not be commented out, and must not fail.

## Consulting the Blueprint

The Superfield Blueprint at \`blueprint/rules/graph.yaml\` is the authoritative source for architecture, security, design patterns, and antipatterns. Before introducing a new public API, a new dependency, a new module boundary, or a new pattern, search the relevant domain blueprint:

- Architecture: \`blueprint/rules/blueprints/arch.yaml\`
- Auth & sessions: \`blueprint/rules/blueprints/auth.yaml\`
- Data layer: \`blueprint/rules/blueprints/data.yaml\`
- Testing: \`blueprint/rules/blueprints/test.yaml\`
- Process & PRs: \`blueprint/rules/blueprints/process.yaml\`
- TypeScript-specific: \`blueprint/rules/implementations/ts/\`

If a rule applies, follow it. If you choose to deviate, document why in the commit body and cite the rule ID you are deviating from.

## Commit standards

- Use conventional commit prefixes: \`feat\`, \`fix\`, \`refactor\`, \`test\`, \`docs\`, \`chore\`, \`security\`.
- Stage files explicitly by name. Never use \`git add .\` or \`git add -A\`.
- Never use \`--no-verify\` to bypass pre-commit hooks. If a hook fails, fix the underlying issue.
- Reference the issue number in the commit body: \`Refs #N\` for in-progress, \`Closes #N\` only on the final commit that completes the work.
- Cite blueprint rule IDs in commit bodies when the change implements or mitigates a specific rule.

## Begin

\`cd\` into your worktree and start by reading every downstream feature issue body."
`;

exports[`prompt builders — snapshots > buildDevelopIssuePrompt primary matches snapshot 1`] = `
"## Project: Superfield

Superfield is a GitOps AI orchestrator. The forge (GitHub) is the single source of truth for all orchestration state — issues are the task queue, the Plan tracking issue holds ordered work, PRs are change proposals, and merge to \`main\` means done. There is no local state aside from credentials.

### Canonical references

- Product requirements: \`docs/prd.md\` in this repository
- Design rules graph: \`blueprint/rules/graph.yaml\` (the Superfield Blueprint)
- Per-domain blueprint rules: \`blueprint/rules/blueprints/<domain>.yaml\`
- TypeScript implementation rules: \`blueprint/rules/implementations/ts/\`

When in doubt about an architectural or design decision, consult the blueprint rule that applies and cite its rule ID (e.g. \`ARCH-P-001\`) in commit messages and PR bodies.

## Assignment

- Issue: #42 — feat: example feature
- Phase: Identity
- Branch: feat/42
- URL: https://github.com/o/r/issues/42

## Issue body

## Phase
Identity

## Motivation
Because.

## Features
- [ ] Build it

## Test Plan
- [ ] Verify it

## Worktree isolation

Your assigned worktree is:

\`/tmp/wt\`

All work must happen inside this directory. Do not:

- Touch files outside the worktree
- Touch the main repo checkout or any other issue's worktree
- Modify shared user config or system files
- Run commands that mutate state outside the worktree (e.g. \`gh repo edit\` on a different repo)

The first thing you do is \`cd\` into the worktree. Every subsequent shell command runs from there.

## Role: PRIMARY

You are the primary agent for this issue. You drive the issue through every stage of the dev-loop lifecycle until the PR is merged and the issue is CLOSED:

1. Branch (already prepared by the orchestrator)
2. Develop — TDD outside-in, push frequently
3. Checklist complete — every \`- [ ]\` in the issue body checked off
4. PR open — open as ready for review (never draft)
5. CI pass — wait for all check runs to succeed
6. Merge gate — confirm all preceding Plan issues are CLOSED
7. Merge — merge to \`main\`, confirm issue closes

You do NOT exit until the PR is merged and the issue is CLOSED. While CI is running, do not idle: re-read the issue, check off any items already evidenced by committed code, audit the implementation against the acceptance criteria.

If a speculative agent already worked on this issue and the checklist is already complete when you arrive, skip straight to step 4 (open the PR).

## TDD outside-in workflow

You work strictly test-first, from the outside in:

1. Read the acceptance criteria and test plan in the issue.
2. Write the outermost failing integration test first.
3. Write the minimum implementation to make that test pass.
4. Drop one level inward: write the next failing unit test.
5. Implement the minimum code to make it pass.
6. Repeat until every acceptance-criterion item is met.
7. Refactor only when tests are green.

Never write implementation code before the test that requires it exists.

### Pushing

Push to the remote branch after every test-green cycle. Do not accumulate large uncommitted diffs — frequent pushes preserve your work.

### Checklist gardening

After every push, re-read the issue and tick off any checklist items already evidenced by committed code. Do not wait for the implementation to be "fully done" before updating the checklist; the orchestrator uses checklist state to decide when stage 3 (checklist complete) is reached.

## Consulting the Blueprint

The Superfield Blueprint at \`blueprint/rules/graph.yaml\` is the authoritative source for architecture, security, design patterns, and antipatterns. Before introducing a new public API, a new dependency, a new module boundary, or a new pattern, search the relevant domain blueprint:

- Architecture: \`blueprint/rules/blueprints/arch.yaml\`
- Auth & sessions: \`blueprint/rules/blueprints/auth.yaml\`
- Data layer: \`blueprint/rules/blueprints/data.yaml\`
- Testing: \`blueprint/rules/blueprints/test.yaml\`
- Process & PRs: \`blueprint/rules/blueprints/process.yaml\`
- TypeScript-specific: \`blueprint/rules/implementations/ts/\`

If a rule applies, follow it. If you choose to deviate, document why in the commit body and cite the rule ID you are deviating from.

## Commit standards

- Use conventional commit prefixes: \`feat\`, \`fix\`, \`refactor\`, \`test\`, \`docs\`, \`chore\`, \`security\`.
- Stage files explicitly by name. Never use \`git add .\` or \`git add -A\`.
- Never use \`--no-verify\` to bypass pre-commit hooks. If a hook fails, fix the underlying issue.
- Reference the issue number in the commit body: \`Refs #N\` for in-progress, \`Closes #N\` only on the final commit that completes the work.
- Cite blueprint rule IDs in commit bodies when the change implements or mitigates a specific rule.

## Begin

\`cd\` into your worktree and start by re-reading the issue. Then write the outermost failing test."
`;

exports[`prompt builders — snapshots > buildDevelopIssuePrompt speculative matches snapshot 1`] = `
"## Project: Superfield

Superfield is a GitOps AI orchestrator. The forge (GitHub) is the single source of truth for all orchestration state — issues are the task queue, the Plan tracking issue holds ordered work, PRs are change proposals, and merge to \`main\` means done. There is no local state aside from credentials.

### Canonical references

- Product requirements: \`docs/prd.md\` in this repository
- Design rules graph: \`blueprint/rules/graph.yaml\` (the Superfield Blueprint)
- Per-domain blueprint rules: \`blueprint/rules/blueprints/<domain>.yaml\`
- TypeScript implementation rules: \`blueprint/rules/implementations/ts/\`

When in doubt about an architectural or design decision, consult the blueprint rule that applies and cite its rule ID (e.g. \`ARCH-P-001\`) in commit messages and PR bodies.

## Assignment

- Issue: #42 — feat: example feature
- Phase: Identity
- Branch: feat/42
- URL: https://github.com/o/r/issues/42

## Issue body

## Phase
Identity

## Motivation
Because.

## Features
- [ ] Build it

## Test Plan
- [ ] Verify it

## Worktree isolation

Your assigned worktree is:

\`/tmp/wt\`

All work must happen inside this directory. Do not:

- Touch files outside the worktree
- Touch the main repo checkout or any other issue's worktree
- Modify shared user config or system files
- Run commands that mutate state outside the worktree (e.g. \`gh repo edit\` on a different repo)

The first thing you do is \`cd\` into the worktree. Every subsequent shell command runs from there.

## Role: SPECULATIVE

You are a speculative agent for this issue. You drive the issue through stages 1–3 of the dev-loop lifecycle, then exit:

1. Branch (already prepared by the orchestrator)
2. Develop — TDD outside-in, push frequently
3. Checklist complete — every \`- [ ]\` in the issue body checked off

Once the checklist is complete, exit immediately. Do NOT:

- Open a pull request — that is the primary's job and would consume CI minutes
- Wait for CI — there is no CI to wait for at this stage
- Wait for predecessors — the merge gate is not yours to satisfy

Push your final state to the remote branch before exiting so the primary can pick up exactly where you left off.

## TDD outside-in workflow

You work strictly test-first, from the outside in:

1. Read the acceptance criteria and test plan in the issue.
2. Write the outermost failing integration test first.
3. Write the minimum implementation to make that test pass.
4. Drop one level inward: write the next failing unit test.
5. Implement the minimum code to make it pass.
6. Repeat until every acceptance-criterion item is met.
7. Refactor only when tests are green.

Never write implementation code before the test that requires it exists.

### Pushing

Push to the remote branch after every test-green cycle. Do not accumulate large uncommitted diffs — frequent pushes preserve your work.

### Checklist gardening

After every push, re-read the issue and tick off any checklist items already evidenced by committed code. Do not wait for the implementation to be "fully done" before updating the checklist; the orchestrator uses checklist state to decide when stage 3 (checklist complete) is reached.

## Consulting the Blueprint

The Superfield Blueprint at \`blueprint/rules/graph.yaml\` is the authoritative source for architecture, security, design patterns, and antipatterns. Before introducing a new public API, a new dependency, a new module boundary, or a new pattern, search the relevant domain blueprint:

- Architecture: \`blueprint/rules/blueprints/arch.yaml\`
- Auth & sessions: \`blueprint/rules/blueprints/auth.yaml\`
- Data layer: \`blueprint/rules/blueprints/data.yaml\`
- Testing: \`blueprint/rules/blueprints/test.yaml\`
- Process & PRs: \`blueprint/rules/blueprints/process.yaml\`
- TypeScript-specific: \`blueprint/rules/implementations/ts/\`

If a rule applies, follow it. If you choose to deviate, document why in the commit body and cite the rule ID you are deviating from.

## Commit standards

- Use conventional commit prefixes: \`feat\`, \`fix\`, \`refactor\`, \`test\`, \`docs\`, \`chore\`, \`security\`.
- Stage files explicitly by name. Never use \`git add .\` or \`git add -A\`.
- Never use \`--no-verify\` to bypass pre-commit hooks. If a hook fails, fix the underlying issue.
- Reference the issue number in the commit body: \`Refs #N\` for in-progress, \`Closes #N\` only on the final commit that completes the work.
- Cite blueprint rule IDs in commit bodies when the change implements or mitigates a specific rule.

## Begin

\`cd\` into your worktree and start by re-reading the issue. Then write the outermost failing test."
`;

exports[`prompt builders — snapshots > buildDocCanonicalSyncPrompt matches snapshot 1`] = `
"## Task: doc-canonical-sync

PR #100 just merged to \`main\`. Determine whether it introduced a significant feature that requires updating the PRD or README, and if so, emit the patches to apply.

### Merged PR

Title: feat: new command

Body:
Adds frobnicate command

### Files changed

- packages/cli/commands/frobnicate.ts

### Current PRD (\`docs/prd.md\`)

# PRD
## Commands


### Current README

# README


## What counts as significant

Update the canonical docs only if the PR:

- Adds a new CLI command or subcommand
- Adds a new public API surface (exported function, class, type) that other packages can consume
- Changes the behavior of an existing command in a way that contradicts the PRD's current description
- Adds or removes a Roadmap-phase deliverable
- Adds a new loop or stage to \`start\`
- Adds a new external dependency listed in the Libraries section

Bug fixes, refactors, internal cleanups, test additions, and minor changes do NOT require canonical doc updates. If the change is not significant, emit empty patches.

## Output contract

Emit exactly one JSON object:

\`\`\`json
{
  "significant": true,
  "rationale": "1 sentence explaining why this is canonically significant",
  "prd_patches": [
    {
      "section": "## Roadmap",
      "old_text": "...",
      "new_text": "..."
    }
  ],
  "readme_patches": []
}
\`\`\`

Patches must be exact text replacements suitable for non-fuzzy string match. \`old_text\` must appear verbatim in the current document. If the change is not significant, set \`"significant": false\` and emit empty arrays.

Emit JSON only — no surrounding prose."
`;

exports[`prompt builders — snapshots > buildDocConsistencyPrompt matches snapshot 1`] = `
"## Task: doc-consistency

You are checking the documentation fractal for cross-level inconsistencies. Documentation is maintained at three levels:

1. **Canonical** — PRD, architecture docs, top-level README
2. **Module** — package READMEs, public API doc comments
3. **Inline** — function and type doc comments in source files

A change at any level can create inconsistencies at the others. Your job is to detect and resolve them. Treat the code (inline level) as ground truth: if module or canonical docs contradict the inline reality, the inline description wins.

### Canonical snippets

**docs/prd.md**

# PRD

### Module snippets

**packages/core/README.md**

# core

### Inline snippets

**packages/core/foo.ts** — \`spawnAgent\`

/** doc */

## What you check

For each canonical or module snippet, ask:

- Does it describe a function/class/type that still exists?
- Does the description still match what the inline doc says?
- Are flags, options, return values, or behaviors still accurate?

## Output contract

Emit exactly one JSON object:

\`\`\`json
{
  "inconsistencies": [
    {
      "level": "canonical",
      "path": "docs/prd.md",
      "section": "## Configuration",
      "concern": "PRD says config lives at ~/.foo but code says ~/.superfield",
      "ground_truth_source": "packages/core/config.ts",
      "fix_text_old": "~/.foo",
      "fix_text_new": "~/.superfield"
    }
  ]
}
\`\`\`

If no inconsistencies are found, emit \`"inconsistencies": []\`.

Emit JSON only — no surrounding prose."
`;

exports[`prompt builders — snapshots > buildDocCoveragePrompt matches snapshot 1`] = `
"## Task: doc-coverage

PR #99 just merged to \`main\`. Scan the changed source files for exported symbols (functions, classes, types, interfaces, constants) that lack a doc comment.

### Files changed

- packages/core/foo.ts
- packages/cli/bar.ts

## What you check

For each \`.ts\` file in the list above:

1. Read the file.
2. Find every \`export\` declaration: \`export function\`, \`export class\`, \`export interface\`, \`export type\`, \`export const\`, \`export enum\`.
3. Check whether the line immediately above each export is a JSDoc comment (\`/** ... */\`) or a single-line comment block describing the symbol.
4. Flag any export that lacks a doc comment.

Skip:

- Re-exports from \`index.ts\` files (\`export { Foo } from './foo.ts'\`)
- Symbols starting with \`_\` (intentionally internal)
- Files in \`tests/\` directories

## Output contract

Emit exactly one JSON object:

\`\`\`json
{
  "missing_docs": [
    {
      "file": "packages/core/agent.ts",
      "symbol": "spawnAgent",
      "kind": "function",
      "line": 42
    }
  ]
}
\`\`\`

If everything is documented, emit \`"missing_docs": []\`.

Emit JSON only — no surrounding prose."
`;

exports[`prompt builders — snapshots > buildFeatureEvaluatePrompt matches snapshot 1`] = `
"## Project: Superfield

Superfield is a GitOps AI orchestrator. The forge (GitHub) is the single source of truth for all orchestration state — issues are the task queue, the Plan tracking issue holds ordered work, PRs are change proposals, and merge to \`main\` means done. There is no local state aside from credentials.

### Canonical references

- Product requirements: \`docs/prd.md\` in this repository
- Design rules graph: \`blueprint/rules/graph.yaml\` (the Superfield Blueprint)
- Per-domain blueprint rules: \`blueprint/rules/blueprints/<domain>.yaml\`
- TypeScript implementation rules: \`blueprint/rules/implementations/ts/\`

When in doubt about an architectural or design decision, consult the blueprint rule that applies and cite its rule ID (e.g. \`ARCH-P-001\`) in commit messages and PR bodies.

## Task: feature-evaluate

Evaluate the following feature request and emit a structured \`IssueBody\` JSON object suitable for creating a GitHub issue.

### Feature request

Add a logout button to the navbar

### Current Plan

## Phase: P


### Open issues

- #1: feat: existing

## Consulting the Blueprint

The Superfield Blueprint at \`blueprint/rules/graph.yaml\` is the authoritative source for architecture, security, design patterns, and antipatterns. Before introducing a new public API, a new dependency, a new module boundary, or a new pattern, search the relevant domain blueprint:

- Architecture: \`blueprint/rules/blueprints/arch.yaml\`
- Auth & sessions: \`blueprint/rules/blueprints/auth.yaml\`
- Data layer: \`blueprint/rules/blueprints/data.yaml\`
- Testing: \`blueprint/rules/blueprints/test.yaml\`
- Process & PRs: \`blueprint/rules/blueprints/process.yaml\`
- TypeScript-specific: \`blueprint/rules/implementations/ts/\`

If a rule applies, follow it. If you choose to deviate, document why in the commit body and cite the rule ID you are deviating from.

## What you must decide

1. **PRD alignment** — does this feature fit the product as defined in \`docs/prd.md\`? If it conflicts, say so in your output and propose either an alternative scope or a PRD amendment.
2. **Blueprint fit** — check the blueprint domains relevant to this work (\`arch\`, \`auth\`, \`data\`, \`process\`, \`test\`, \`ux\`, \`worker\`). Cite any rule IDs that apply.
3. **Duplicate detection** — search the open issues list above for exact duplicates, likely overlap, or improvement candidates of an existing issue. If this should improve an existing issue rather than become a new one, say so.
4. **Phase placement** — which phase does this belong to? If there's no appropriate phase yet, name a new one.
5. **Smallest clear scope** — prefer the narrowest scope that satisfies the request.

## Output contract

Emit exactly one JSON object with this shape, and nothing else:

\`\`\`json
{
  "title": "feat: short conventional-commit-style title",
  "phase": "Phase name",
  "motivation": "1–3 sentences on why this work exists",
  "features": [
    "First feature/deliverable",
    "Second feature/deliverable"
  ],
  "test_plan": [
    "First test scenario",
    "Second test scenario"
  ],
  "canonical_docs": [
    "docs/prd.md#section",
    "blueprint/rules/blueprints/<domain>.yaml"
  ],
  "duplicate_of": null,
  "blueprint_rules_cited": ["ARCH-P-001"]
}
\`\`\`

If \`duplicate_of\` is non-null (issue number), the orchestrator will skip creating a new issue and report the duplicate to the user.

## Rules

- Emit JSON only — no surrounding prose, no markdown code fence labels.
- Do not invent rule IDs that don't exist in the blueprint.
- Do not include \`acceptance_criteria\` or \`scope\` — those fields no longer exist; everything actionable goes in \`features\` or \`test_plan\`."
`;

exports[`prompt builders — snapshots > buildIssueAuditPrompt matches snapshot 1`] = `
"## Task: issue-audit

You are auditing one GitHub issue for schema conformance against the Superfield IssueBody schema.

### Issue #42 — feat: example feature

## Phase
Identity

## Motivation
Because.

## Features
- [ ] Build it

## Test Plan
- [ ] Verify it

## What you check

Required sections (must be present as level-2 markdown headings):

1. \`## Phase\` — non-empty phase name
2. \`## Motivation\` — non-empty prose
3. \`## Canonical docs\` — at least one link
4. \`## Features\` — must contain at least one \`- [ ]\` or \`- [x]\` checkbox
5. \`## Test Plan\` — must contain at least one \`- [ ]\` or \`- [x]\` checkbox

Forbidden in issue bodies:

- \`## Issue type\` — superseded; classification lives on labels
- \`## Deliverables\` — superseded by \`## Features\`
- \`## Acceptance Criteria\` — superseded by \`## Features\`
- \`## Scope\` — superseded by \`## Features\`
- \`Step N\` / \`Batch N\` plan-order metadata in title or body

## Output contract

Emit exactly one JSON object:

\`\`\`json
{
  "issue_number": 42,
  "conformant": true,
  "missing_sections": [],
  "forbidden_sections": [],
  "empty_sections": [],
  "fix_suggestions": []
}
\`\`\`

\`fix_suggestions\` should describe non-destructive normalizations the orchestrator can apply: add missing sections with \`TBD\` placeholders, never overwrite existing content. Set \`conformant\` to \`true\` only if all five required sections are present, non-empty, and contain checkboxes where required, and there are no forbidden sections.

Emit JSON only — no surrounding prose."
`;

exports[`prompt builders — snapshots > buildReplanEvaluatePrompt matches snapshot 1`] = `
"## Project: Superfield

Superfield is a GitOps AI orchestrator. The forge (GitHub) is the single source of truth for all orchestration state — issues are the task queue, the Plan tracking issue holds ordered work, PRs are change proposals, and merge to \`main\` means done. There is no local state aside from credentials.

### Canonical references

- Product requirements: \`docs/prd.md\` in this repository
- Design rules graph: \`blueprint/rules/graph.yaml\` (the Superfield Blueprint)
- Per-domain blueprint rules: \`blueprint/rules/blueprints/<domain>.yaml\`
- TypeScript implementation rules: \`blueprint/rules/implementations/ts/\`

When in doubt about an architectural or design decision, consult the blueprint rule that applies and cite its rule ID (e.g. \`ARCH-P-001\`) in commit messages and PR bodies.

## Task: replan-evaluate

Group the following open issues into coherent phases, assign each phase a dev-scout, and emit a strict total ordering as JSON.

### Current Plan

(no Plan issue exists yet)

### Open issues

### #10 — feat: A
Labels: feature

a body

## Consulting the Blueprint

The Superfield Blueprint at \`blueprint/rules/graph.yaml\` is the authoritative source for architecture, security, design patterns, and antipatterns. Before introducing a new public API, a new dependency, a new module boundary, or a new pattern, search the relevant domain blueprint:

- Architecture: \`blueprint/rules/blueprints/arch.yaml\`
- Auth & sessions: \`blueprint/rules/blueprints/auth.yaml\`
- Data layer: \`blueprint/rules/blueprints/data.yaml\`
- Testing: \`blueprint/rules/blueprints/test.yaml\`
- Process & PRs: \`blueprint/rules/blueprints/process.yaml\`
- TypeScript-specific: \`blueprint/rules/implementations/ts/\`

If a rule applies, follow it. If you choose to deviate, document why in the commit body and cite the rule ID you are deviating from.

## What you must decide

1. **Phase grouping** — group related issues into phases that share a delivery goal. Each phase needs a name, a one-sentence goal, and an ordered list of issues belonging to it.
2. **Phase dependencies** — a phase \`B\` may depend on phase \`A\` if every issue in \`A\` must close before any issue in \`B\` may begin.
3. **Scout assignment** — every phase needs exactly one dev-scout issue placed first. If an open issue with the \`dev-scout\` label exists for a phase, use it. Otherwise, emit a \`scout_spec\` so the orchestrator can create one.
4. **Risk scoring** — assign each issue a risk score from 1 (trivial) to 6 (unknown territory).
5. **Total ordering** — produce a strict total order across all phases. Issues in earlier phases come before issues in dependent phases. The scout always comes first within its phase. Break ties by prioritising higher-risk issues first.

## Output contract

Emit exactly one JSON object with this shape, and nothing else:

\`\`\`json
{
  "phases": [
    {
      "name": "Identity foundation",
      "goal": "Create the auth and session seams needed by all identity work.",
      "depends_on": [],
      "scout_issue_number": 196,
      "issue_numbers": [196, 201, 205]
    }
  ],
  "ordered_issues": [
    {
      "number": 196,
      "title": "chore: scout identity integration seams",
      "phase": "Identity foundation",
      "kind": "dev-scout",
      "risk": 5,
      "dependencies": [],
      "dependents": [201, 205],
      "parallel_safe": true
    }
  ],
  "scout_specs": []
}
\`\`\`

If a phase has no existing dev-scout issue, set \`scout_issue_number: null\` in the phase entry and add a \`scout_spec\` to the \`scout_specs\` array containing a complete \`IssueBody\` for the scout to be created.

## Rules

- Emit JSON only — no surrounding prose.
- \`ordered_issues\` is a strict total order; never two issues at the same position.
- Never repurpose a feature issue as a scout. Scouts must be issues whose labels include \`dev-scout\`.
- Phase dependencies must be acyclic."
`;
